--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body, html {
 #container {
     position: relative;
     height: 100%;
-
+    opacity: 0;
 }
 
 .grid-wrapper {
@@ -35,8 +35,10 @@ body, html {
     font-size: 150%;
     margin: auto;
     padding:0;
-    box-shadow: inset 0 0 1vw rgba(0, 0, 0, 0.26);
+    box-shadow: inset 0 0 1vw 0.2vw rgba(0, 0, 0, 0.26);
     position:relative;
+    opacity: 0;
+
 }
 
 .hand {
@@ -60,4 +62,18 @@ body, html {
     background-color: black;
     margin-left: calc(50% - 0.35vw);
     position:absolute;
+}
+
+.title {
+    position:absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity:0;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 5vw;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    line-height: 20px;
 }
